--- a/tickets/package.json
+++ b/tickets/package.json
@@ -3,18 +3,34 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "build": "babel --extensions .ts ./src -d ./dist",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
     "bson": "^5.4.0",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "ip": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
     "kareem": "^2.5.1",
     "memory-pager": "^1.5.0",
     "mongodb": "^5.7.0",
     "mongodb-connection-string-url": "^2.6.0",
-    "mongoose": "^7.4.0",
+    "mongoose": "^7.4.1",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "punycode": "^2.3.0",
     "saslprep": "^1.0.3",
     "sift": "^16.0.1",
@@ -24,10 +40,6 @@
     "tr46": "^3.0.0",
     "webidl-conversions": "^7.0.0",
     "whatwg-url": "^11.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
