--- a/notifications/package.json
+++ b/notifications/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel --extensions .ts ./src -d ./dist",
     "start": "node dist/index.js",
+    "dev:start": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,7 +22,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.1"
+    "jsonwebtoken": "^9.0.1"
   }
 }
