--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel --extensions .ts ./src -d ./dist",
     "start": "cd dist && node server.js",
+    "dev:start": "nodemon src/server.ts",
     "test": "nyc mocha -r ts-node/register --timeout 500000000 test/**/*.spec.ts"
   },
   "keywords": [],
@@ -29,7 +30,6 @@
     "http-proxy-middleware": "^2.0.6",
     "http-route-proxy": "^0.2.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
