--- a/tickets/package.json
+++ b/tickets/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel --extensions .ts ./src -d ./dist",
     "start": "node dist/index.js",
+    "dev:start": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
