--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http-proxy-middleware": "^2.0.6",
     "http-route-proxy": "^0.2.2",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
