--- a/notifications/package.json
+++ b/notifications/package.json
@@ -21,7 +21,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.0"
+    "jsonwebtoken": "^9.0.1"
   }
 }
