--- a/tickets/package.json
+++ b/tickets/package.json
@@ -39,7 +39,8 @@
     "sparse-bitfield": "^3.0.3",
     "tr46": "^3.0.0",
     "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^11.0.0"
+    "whatwg-url": "^11.0.0",
+    "openai": "^4.3.1"
   },
   "keywords": [],
   "author": "",
