--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "openai": "^4.3.1",
     "quill": "^1.3.7",
     "typescript": "^5.0.4"
   },
