--- a/tickets/package.json
+++ b/tickets/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
+    "axios": "^1.5.0",
     "bson": "^5.4.0",
     "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.3.1",
     "punycode": "^2.3.0",
     "saslprep": "^1.0.3",
     "sift": "^16.0.1",
@@ -39,8 +41,7 @@
     "sparse-bitfield": "^3.0.3",
     "tr46": "^3.0.0",
     "webidl-conversions": "^7.0.0",
-    "whatwg-url": "^11.0.0",
-    "openai": "^4.3.1"
+    "whatwg-url": "^11.0.0"
   },
   "keywords": [],
   "author": "",
