--- a/tickets/package.json
+++ b/tickets/package.json
@@ -28,10 +28,12 @@
     "memory-pager": "^1.5.0",
     "mongodb": "^5.7.0",
     "mongodb-connection-string-url": "^2.6.0",
+    "mongoose": "^7.5.3",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "openai": "^4.3.1",
     "punycode": "^2.3.0",
     "saslprep": "^1.0.3",
