--- a/emails/package.json
+++ b/emails/package.json
@@ -9,6 +9,8 @@
   "author": "Edwin Chang",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "mailparser": "^3.6.5",
     "moment": "^2.29.4",
